[package]
name = "redbutton"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"
default-run = "redbutton"

[lib]
name = "meta"
proc-macro = true
path = "src/meta.rs"

[[bin]]
name = "redbutton"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
scheme = { path = "../scheme" }
clap = ">=2.33"
regex = ">=1.4"
